tests/machine/x/erlang/group_by_conditional_sum.error
exit status 127
tests/machine/x/erlang_new/group_by_conditional_sum.erl:6:388: syntax error before: '}'
escript: There were compilation errors.
